CSS background fix image on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4052,8 +4052,8 @@ input, select, textarea {
 		background-size: cover;
 	}
 
-	body.is-mobile.landing #banner,
-	body.is-mobile.landing .wrapper.style4 {
+	body.is-mobile.landing.video #banner,
+	body.is-mobile.landing.video .wrapper.style4 {
 		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../img/GH5.jpg");
 		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../img/GH5.jpg");
 		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../img/GH5.jpg");
